--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,24 @@
-html {
+header {
   background-color: #ffe500;
+  text-align: center;
 }
 
 h1 {
   color: #b20953;
-  text-align: center;
   font-size: 3rem;
 }
 
-section {
-  background-color: #2f2d13;
+h2 {
+  color: #b20953;
+  font-size: 1.875rem;
+}
+
+nav li {
+  display: inline;
+}
+
+a {
+  color: #fff;
+  font-family: Georgia;
+  background-color: #b2a212;
 }
