--- a/css/main.css
+++ b/css/main.css
@@ -5,20 +5,51 @@ header {
 
 h1 {
   color: #b20953;
+  font-family: Sigmar One;
   font-size: 3rem;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
   color: #b20953;
   font-size: 1.875rem;
+  font-family: Sigmar One;
 }
 
 nav li {
-  display: inline;
+  display: inline-block;
+  margin-bottom: .3em;
 }
 
 a {
   color: #fff;
   font-family: Georgia;
   background-color: #b2a212;
+  margin: 0;
+  padding: .2em .5em .3em;
+  font-size: 1.125rem;
+  border-radius: 4px;
+  display: inline-block;
+}
+
+body {
+  margin:0;
+}
+
+.nav {
+  margin:0;
+  padding: 0;
+}
+
+a:hover {
+  background-color: #cc1465;
+}
+
+footer {
+  background-color: #ffe500;
+  text-align: center;
+  Padding: .75em;
+  font-size: .75rem;
+  font-family: Georgia;
 }
