--- a/css/main.css
+++ b/css/main.css
@@ -5,16 +5,17 @@ header {
 
 h1 {
   color: #b20953;
-  font-family: Sigmar One;
+  font-family: "Sigmar One";
   font-size: 3rem;
   margin: 0;
   padding: 0;
+  line-height: 1.5;
 }
 
 h2 {
   color: #b20953;
   font-size: 1.875rem;
-  font-family: Sigmar One;
+  font-family: "Sigmar One";
 }
 
 nav li {
@@ -32,14 +33,15 @@ a {
   border-radius: 4px;
   display: inline-block;
   line-height: 1.5;
+  text-decoration: none;
 }
 
 body {
-  margin:0;
+  margin: 0;
 }
 
 .nav {
-  margin:0;
+  margin: 0;
   padding: 0;
 }
 
@@ -54,7 +56,7 @@ a:hover {
 footer {
   background-color: #ffe500;
   text-align: center;
-  Padding: .75em;
+  padding: .75em;
   font-size: .75rem;
   font-family: Georgia;
 }
