--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ header {
 }
 
 h1 {
-  color: #b20953;
+  color: #cc1465;
   font-family: "Sigmar One";
   font-size: 3rem;
   margin: 0;
@@ -13,7 +13,7 @@ h1 {
 }
 
 h2 {
-  color: #b20953;
+  color: #cc1465;
   font-size: 1.875rem;
   font-family: "Sigmar One";
 }
