--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,16 @@ a:hover {
 }
 
 img {
-  width: 50%
+  width: 100%;
+  display: block;
+}
+
+main {
+  padding: 0 .75em 0 .75em;
+}
+
+p {
+  font-size: 1.125rem;
 }
 
 footer {
