--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,27 @@
+html {
+  box-sizing: border-box;
+  line-height: 1.5;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 header {
   background-color: #ffe500;
   text-align: center;
 }
 
 h1 {
-  color: #cc1465;
+  color: #b20953;
   font-family: "Sigmar One";
   font-size: 3rem;
   margin: 0;
   padding: 0;
-  line-height: 1.5;
 }
 
 h2 {
-  color: #cc1465;
+  color: #b20953;
   font-size: 1.875rem;
   font-family: "Sigmar One";
 }
@@ -46,7 +54,7 @@ body {
 }
 
 .nav .current {
-  background-color: #cc1465;
+  background-color: #b20953;
 }
 
 a:hover {
@@ -59,11 +67,12 @@ img {
 }
 
 main {
-  padding: 0 .75em 0 .75em;
+  padding: 0 .75em;
 }
 
 p {
   font-size: 1.125rem;
+  color: #2f2d13;
 }
 
 footer {
