--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
+  font-family: Georgia;
 }
 
 *, *::before, *::after {
@@ -33,14 +34,12 @@ nav li {
 
 a {
   color: #fff;
-  font-family: Georgia;
   background-color: #b2a212;
   margin: 0;
   padding: .2em .5em .3em;
   font-size: 1.125rem;
   border-radius: 4px;
   display: inline-block;
-  line-height: 1.5;
   text-decoration: none;
 }
 
@@ -71,7 +70,6 @@ main {
 }
 
 p {
-  font-size: 1.125rem;
   color: #2f2d13;
 }
 
@@ -79,6 +77,8 @@ footer {
   background-color: #ffe500;
   text-align: center;
   padding: .75em;
+}
+
+small {
   font-size: .75rem;
-  font-family: Georgia;
 }
